# lgtm

./: README.md  main.py  pyproject.toml
.circleci/: config.yml
lgtm/: core.py
python_jissen/: core.py  greet.py  main.py
tests/: test_core.py
