[tool.poetry]
name = "python-jissen"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_jissen"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
Pillow = "^9.2.0"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
